scrollbar fix and font sizes

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -136,6 +136,10 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease;
 
+  p {
+    font-size: 1.0rem !important;
+  }
+
   &:hover {
     // cursor: pointer;
     transform: scale(1.05);
