--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar-lewagon {
-  position: fixed;
+  position: sticky;
   top: 0;
   background-color: $beije-main;
   z-index: 1000 !important;
