--- a/app/assets/stylesheets/pages/_layout.scss
+++ b/app/assets/stylesheets/pages/_layout.scss
@@ -12,6 +12,14 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+
+  #pet-show p {
+    font-size: 1.2rem;
+  }
+
+  #user-show p {
+    font-size: 1.2rem;
+  }
 }
 
 .application-image {
