--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -232,7 +232,7 @@
 
 .return-to-search-from-pet {
   position: absolute;
-  top: -20px;
+  top: 10px;
   // left: -10px;
   z-index: 10;
   h1 {
